# pregasm

./: .gitignore  README.md
examples/gas/: fig_03_01_gas.s
examples/gcc/: CMakeLists.txt
examples/gcc/fig_03_11/include/: io.h
examples/gcc/fig_03_11/src/: io.inc  io.s
examples/gcc/fig_04_18/: CMakeLists.txt
examples/gcc/fig_04_18/src/: example.s  io.inc
examples/gcc/src/: example.s  framework.c
examples/vs2008/console32/console32/: console32.vcproj
examples/vs2008/console64/: console64.sln
examples/vs2008/windows32/: windows32.sln
examples/vs2008/windows32/windows32/Debug/: framework.cod  mt.dep
examples/vs2008/windows64/: masm64.rules  windows64.sln
examples/vs2008/windows64/windows64/x64/Debug/: framework.asm  mt.dep  vc90.idb
gas/: fig_03_01_gas
vs2008/console32/: console32.sln
vs2008/console64/: console64.ncb  masm64.rules
vs2008/console64/console64/: console64.vcproj
vs2008/windows64/windows64/: windows64.vcproj
vs2008/windows64/windows64/x64/Debug/: BuildLog.htm
vs2008/windows64/x64/Debug/: windows64.ilk
